potluckr/gen/testParser.java
// Generated from C:/Users/Dustin/IdeaProjects/potluckr\test.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class testParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, ALLERGIES=4, DIETTYPE=5, MONTH=6, CUISINES=7, 
		CUISINE=8, DIET=9, ALLERGY=10, PRIVATE=11, EVENT=12, NAME=13, PLAN=14, 
		DESCRIPTION=15, PLACE=16, FROM=17, TO=18, DATE=19, RECIPE=20, ATTENDEE=21, 
		UNAVAILABLE=22, AVAILABLE=23, DAY=24, TIME=25, YEAR=26, DESC=27, WS=28, 
		SPACE=29;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_schedule = 2, RULE_event = 3, RULE_name = 4, 
		RULE_description = 5, RULE_place = 6, RULE_time = 7, RULE_date = 8, RULE_plan = 9, 
		RULE_attendee = 10, RULE_allergy = 11, RULE_diet = 12, RULE_cuisine = 13, 
		RULE_available = 14, RULE_unavailable = 15, RULE_recipe = 16;
	public static final String[] ruleNames = {
		"prog", "start", "schedule", "event", "name", "description", "place", 
		"time", "date", "plan", "attendee", "allergy", "diet", "cuisine", "available", 
		"unavailable", "recipe"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "','", null, null, null, null, "'cuisine'", "'diet'", 
		"'allergy'", "'private'", "'event'", "'name'", "'plan'", "'description'", 
		"'place'", "'from'", "'to'", "'date'", "'recipe'", "'attendee'", "'unavailable'", 
		"'available'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "ALLERGIES", "DIETTYPE", "MONTH", "CUISINES", 
		"CUISINE", "DIET", "ALLERGY", "PRIVATE", "EVENT", "NAME", "PLAN", "DESCRIPTION", 
		"PLACE", "FROM", "TO", "DATE", "RECIPE", "ATTENDEE", "UNAVAILABLE", "AVAILABLE", 
		"DAY", "TIME", "YEAR", "DESC", "WS", "SPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "test.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public testParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(testParser.EOF, 0); }
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				start();
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << EVENT) | (1L << PLAN))) != 0) );
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public ScheduleContext schedule() {
			return getRuleContext(ScheduleContext.class,0);
		}
		public PlanContext plan() {
			return getRuleContext(PlanContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRIVATE:
			case EVENT:
				{
				setState(41);
				schedule();
				}
				break;
			case PLAN:
				{
				setState(42);
				plan();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScheduleContext extends ParserRuleContext {
		public TerminalNode EVENT() { return getToken(testParser.EVENT, 0); }
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public TerminalNode PRIVATE() { return getToken(testParser.PRIVATE, 0); }
		public ScheduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterSchedule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitSchedule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitSchedule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScheduleContext schedule() throws RecognitionException {
		ScheduleContext _localctx = new ScheduleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_schedule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRIVATE) {
				{
				setState(45);
				match(PRIVATE);
				}
			}

			setState(48);
			match(EVENT);
			setState(49);
			match(T__0);
			setState(50);
			event();
			setState(51);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitEvent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitEvent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_event);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			name();
			setState(54);
			date();
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(55);
					time();
					}
				}

				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(58);
					place();
					}
				}

				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(61);
					description();
					}
				}

				}
				break;
			case 2:
				{
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(64);
					time();
					}
				}

				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(67);
					description();
					}
				}

				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(70);
					place();
					}
				}

				}
				break;
			case 3:
				{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(73);
					place();
					}
				}

				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(76);
					time();
					}
				}

				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(79);
					description();
					}
				}

				}
				break;
			case 4:
				{
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(82);
					place();
					}
				}

				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(85);
					description();
					}
				}

				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(88);
					time();
					}
				}

				}
				break;
			case 5:
				{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(91);
					description();
					}
				}

				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(94);
					place();
					}
				}

				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(97);
					time();
					}
				}

				}
				break;
			case 6:
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DESCRIPTION) {
					{
					setState(100);
					description();
					}
				}

				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FROM) {
					{
					setState(103);
					time();
					}
				}

				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLACE) {
					{
					setState(106);
					place();
					}
				}

				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(testParser.NAME, 0); }
		public TerminalNode DESC() { return getToken(testParser.DESC, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(NAME);
			setState(112);
			match(T__0);
			setState(113);
			match(DESC);
			setState(114);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode DESCRIPTION() { return getToken(testParser.DESCRIPTION, 0); }
		public List<TerminalNode> DESC() { return getTokens(testParser.DESC); }
		public TerminalNode DESC(int i) {
			return getToken(testParser.DESC, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(testParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(testParser.SPACE, i);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(DESCRIPTION);
			setState(117);
			match(T__0);
			setState(118);
			match(DESC);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DESC || _la==SPACE) {
				{
				{
				setState(119);
				_la = _input.LA(1);
				if ( !(_la==DESC || _la==SPACE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlaceContext extends ParserRuleContext {
		public TerminalNode PLACE() { return getToken(testParser.PLACE, 0); }
		public TerminalNode DESC() { return getToken(testParser.DESC, 0); }
		public PlaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_place; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterPlace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitPlace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitPlace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlaceContext place() throws RecognitionException {
		PlaceContext _localctx = new PlaceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_place);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(PLACE);
			setState(128);
			match(T__0);
			setState(129);
			match(DESC);
			setState(130);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(testParser.FROM, 0); }
		public List<TerminalNode> TIME() { return getTokens(testParser.TIME); }
		public TerminalNode TIME(int i) {
			return getToken(testParser.TIME, i);
		}
		public TerminalNode TO() { return getToken(testParser.TO, 0); }
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(FROM);
			setState(133);
			match(T__0);
			setState(134);
			match(TIME);
			setState(135);
			match(TO);
			setState(136);
			match(TIME);
			setState(137);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public TerminalNode DATE() { return getToken(testParser.DATE, 0); }
		public TerminalNode MONTH() { return getToken(testParser.MONTH, 0); }
		public TerminalNode DAY() { return getToken(testParser.DAY, 0); }
		public TerminalNode YEAR() { return getToken(testParser.YEAR, 0); }
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(DATE);
			setState(140);
			match(T__0);
			setState(141);
			match(MONTH);
			setState(142);
			match(DAY);
			setState(143);
			match(YEAR);
			setState(144);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlanContext extends ParserRuleContext {
		public TerminalNode PLAN() { return getToken(testParser.PLAN, 0); }
		public AttendeeContext attendee() {
			return getRuleContext(AttendeeContext.class,0);
		}
		public RecipeContext recipe() {
			return getRuleContext(RecipeContext.class,0);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterPlan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitPlan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitPlan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_plan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(PLAN);
			setState(147);
			match(T__0);
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ATTENDEE:
				{
				setState(148);
				attendee();
				}
				break;
			case RECIPE:
				{
				setState(149);
				recipe();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(152);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttendeeContext extends ParserRuleContext {
		public TerminalNode ATTENDEE() { return getToken(testParser.ATTENDEE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public AllergyContext allergy() {
			return getRuleContext(AllergyContext.class,0);
		}
		public DietContext diet() {
			return getRuleContext(DietContext.class,0);
		}
		public CuisineContext cuisine() {
			return getRuleContext(CuisineContext.class,0);
		}
		public AvailableContext available() {
			return getRuleContext(AvailableContext.class,0);
		}
		public UnavailableContext unavailable() {
			return getRuleContext(UnavailableContext.class,0);
		}
		public AttendeeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attendee; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterAttendee(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitAttendee(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitAttendee(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttendeeContext attendee() throws RecognitionException {
		AttendeeContext _localctx = new AttendeeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attendee);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(ATTENDEE);
			setState(155);
			match(T__0);
			setState(156);
			name();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALLERGY) {
				{
				setState(157);
				allergy();
				}
			}

			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DIET) {
				{
				setState(160);
				diet();
				}
			}

			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CUISINE) {
				{
				setState(163);
				cuisine();
				}
			}

			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AVAILABLE) {
				{
				setState(166);
				available();
				}
			}

			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UNAVAILABLE) {
				{
				setState(169);
				unavailable();
				}
			}

			setState(172);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllergyContext extends ParserRuleContext {
		public TerminalNode ALLERGY() { return getToken(testParser.ALLERGY, 0); }
		public List<TerminalNode> ALLERGIES() { return getTokens(testParser.ALLERGIES); }
		public TerminalNode ALLERGIES(int i) {
			return getToken(testParser.ALLERGIES, i);
		}
		public AllergyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allergy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterAllergy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitAllergy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitAllergy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllergyContext allergy() throws RecognitionException {
		AllergyContext _localctx = new AllergyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_allergy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(ALLERGY);
			setState(175);
			match(T__0);
			setState(179); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(179);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
				case 1:
					{
					setState(176);
					match(ALLERGIES);
					setState(177);
					match(T__2);
					}
					break;
				case 2:
					{
					setState(178);
					match(ALLERGIES);
					}
					break;
				}
				}
				setState(181); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ALLERGIES );
			setState(183);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DietContext extends ParserRuleContext {
		public TerminalNode DIET() { return getToken(testParser.DIET, 0); }
		public TerminalNode DIETTYPE() { return getToken(testParser.DIETTYPE, 0); }
		public DietContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDiet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDiet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDiet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DietContext diet() throws RecognitionException {
		DietContext _localctx = new DietContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_diet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(DIET);
			setState(186);
			match(T__0);
			setState(187);
			match(DIETTYPE);
			setState(188);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
